Tweak all the things

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,16 +9,16 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Want to carve out some creative code time where you can work on your projects without anybody looking over your shoulder or wondering when you'll be finished with that feature? Or maybe there's a language or technology that you've really wanted to try but haven't found the time to do it! </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>Do yourself a favor and come out to Code & Coffee where you can sit down and code to your heart's content on whatever project you bring! Whatever the language and level, show up. MUST HAVE: An upbeat positive attitude and have zero tolerance for stereotypes.</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Theme
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
