--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">Acceptance, Vulnerability, Experimentation</span>
+                        <!-- <span class="skills">Acceptance, Vulnerability, Experimentation</span> -->
                     </div>
                 </div>
             </div>
