--- a/_includes/mission_grid.html
+++ b/_includes/mission_grid.html
@@ -9,7 +9,12 @@
                 </div>
             </div>
             <div class="row">
-                {% for post in site.posts %}
+              <div class="col-lg-12 text-center">
+                <p>
+                  At Code & Coffee we strive to build a safe and inclusive environment, at which developers of all different experience levels and interests can share what they know and experiment with new ideas.
+                </p>
+              </div>
+                <!-- {% for post in site.posts %}
                     <div class="col-sm-4 mission-item">
                         <a href="#missionModal-{{ post.modal-id }}" class="mission-link" data-toggle="modal">
                             <div class="caption">
@@ -20,7 +25,7 @@
                             <img src="img/mission/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
                         </a>
                     </div>
-                {% endfor %}
+                {% endfor %} -->
             </div>
         </div>
     </section>
